--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -64,6 +64,10 @@
     <Analyzer Include="D:\Unity\2022.3.40f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.Properties.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Script\MonsterDamage.cs" />
+    <Compile Include="Assets\Script\PlayerHealth.cs" />
+    <Compile Include="Assets\Script\EnemyBehavior.cs" />
+    <Compile Include="Assets\Script\FireController.cs" />
     <Compile Include="Assets\Script\MS.cs" />
     <Compile Include="Assets\Script\SceneMove.cs" />
   </ItemGroup>
